--- a/index.html
+++ b/index.html
@@ -2,12 +2,45 @@
 <html>
 <head>
 	<title>Miguel Rodriguez</title>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<meta charset="utf-8">
 </head>
 <body>
 <div id="cont">
 	<header>
-		<h1>Miguel Rodriguez Garcia</h1>
+		<div id="foto">
+			<img src="foto.jpg">
+		</div>
+		<div id="datos">
+			<h3>Miguel Rodriguez Garcia</h3>
+			<p>Usuario: MikeRG3</p>
+			<p>Fecha nacimiento: 16/11/1986</p>
+			<p>mrodriguezg@salesianospizarrales.com</p>
+			<p>Domicilio: Salamanca</p>
+		</div>
+		
 	</header>
+	<section id="des">
+		<h2>TITULACIONES</h2>
+		<ul>
+			<li>Licenciatura en Derecho por la USAL</li>
+			<li>Formación Profesional en Desarrollo Aplicaciones Multiplataforma</li>
+		</ul>
+		<h2>CURSOS</h2>
+		<ul>
+			<li>Reparacion y mantenimiento de sistemas</li>
+			<li>HTML5, CSS3, JavaScript y Jquery</li>
+			<li>Linux como entorno de desarrollo</li>
+			<li>Desarrollo de aplicaciones Android</li>
+		</ul>
+	</section>
+	<footer>
+		<hr>
+		<p>Autor: Miguel Rodriguez Garcia</p>
+		<p>Curso Linux como entorno de desarrollo</p>
+		<p>Junio 2018</p>
+	</footer>
 </div>
+
 </body>
 </html>
