Fondo nuevo y meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Miguel Rodriguez</title>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<meta charset="utf-8">
+	<meta name="Autor" content="Miguel Rodriguez">
+	<meta name="Description" content="Curriculum">
+	<meta name="keywords" content="Linux, GitHub, HTML, CSS3">
 </head>
 <body>
 <div id="cont">
