--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="Autor" content="Miguel Rodriguez">
 	<meta name="Description" content="Curriculum">
 	<meta name="keywords" content="Linux, GitHub, HTML, CSS3">
+	<meta name="viewport" content="width=device-width, initial-scale=0.9">
 </head>
 <body>
 <div id="cont">
